prevent goofy ass layout shifting

--- a/public/resources/style.css
+++ b/public/resources/style.css
@@ -94,3 +94,7 @@ footer .ninemark {
 .shower:nth-child(even) img {
     transform: rotate(-10deg)
 }
+
+.hidden {
+    display: none;
+}
